# io_test

./: CMakeLists.txt  Kconfig  README.rst  prj.conf
boards/: spi_master.overlay  twi_master.overlay  twi_slave.overlay  uart.overlay  uart_lp.conf  uart_lp.overlay
dt_overlays/: spi_slave.overlay
src/: gpio.c  main.c  spi_master_bare.c  spi_master_basic.c  spi_master_dt.c  spi_slave_basic.c  spi_slave_dt.c  spi_slave_raw.c  twi_master_bare.c  twi_master_basic.c  twi_master_dt.c  twi_slave_bare.c  twi_slave_basic.c  twi_slave_dt.c  uart_basic.c  uart_dt.c  uart_lp_dt.c
